--- a/ebay.css
+++ b/ebay.css
@@ -12,3 +12,19 @@
     background-origin: padding-box;
     background: url('http://swisscolors.net/img/noise.jpg');
 }
+
+
+.navbutton{
+    text-decoration: unset;
+    background-color: #f5f5f5;
+    color: black;
+    padding: 8px 16px;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.navbuttonwrapper{
+    display: inline-block;
+    position: relative;
+    margin: 5px 5px;
+}
