--- a/ebay.css
+++ b/ebay.css
@@ -10,7 +10,7 @@
     z-index: 90;
     opacity: .07;
     background-origin: padding-box;
-    background: url('http://swisscolors.net/img/noise.jpg');
+    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/noise.jpg');
 }
 
 
