--- a/NewCSS.css
+++ b/NewCSS.css
@@ -42,8 +42,8 @@
     background-color: #dbb700;
 }
 
-td,th {
+#detailtable td, #detailtable th {
     font-size: 16px;
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 10px 20px 10px 10px;
 }
