--- a/NewCSS.css
+++ b/NewCSS.css
@@ -13,6 +13,19 @@
     background: url('https://rawgit.com/kmgallahan/CSSFiles/master/noise.jpg');
 }
 
+#navbuttoncontainer, #storebuttoncontainer{
+    text-align: center;
+    font-size:18px;
+    height: auto;
+    padding-bottom: 10;
+    padding-top: 10;
+}
+
+.navbuttonwrapper{
+    display: inline-block;
+    position: relative;
+    margin: 5px 4px;
+}
 
 .navbutton{
     text-decoration: unset;
@@ -23,27 +36,70 @@
     box-sizing: border-box;
 }
 
-.navbuttonwrapper{
-    display: inline-block;
+.note{
+    padding: 10px 3% 10px 3%;
+    background-color: #dbb700;
+}
+
+.outernotecontainer{
+    text-align: center;
+    margin: auto;
+    max-width: 700;
     position: relative;
-    margin: 5px 4px;
+}
+
+.innernotecontainer{
+    padding:1px 3% 1px 3%;
+    margin: 10px 15% 10px 15%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.outercontainer{
+    max-width: 875px;
+    margin: auto; 
+}
+
+#maincontainer{
+    position: relative;
+    background:white;
+    text-align:left;
+    color:#333;
+    border:1px solid #dedede;
+    text-decoration: unset;
 }
 
 .sectionheading{
-    padding: 10px 5% 10px 5%;
+    padding: 15px 5% 15px 5%;
     background-color: #b7c7bd;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
 }
 
-.note{
-    padding: 10px 3% 10px 3%;
-    background-color: #dbb700;
+#listingtitleheader{
+    padding-top: 15px; 
+    padding-bottom: 15px;
 }
 
 #detailtable td, #detailtable th {
     font-size: 20px;
     border: 1px solid #ddd;
     padding: 9px 20px 9px 20px;
+}
+
+.innertextcontainer{
+    padding:15px 7% 10px 7%;
+}
+
+#gallerycontainer{
+    padding:0px 5% 10px 5%;
+}
+
+.galleryimage{
+    margin-bottom: 10px;
+    max-width: 100%;
+    max-height: 700px;
+    position: relative;
+    z-index: 99;
 }
