--- a/NewCSS.css
+++ b/NewCSS.css
@@ -39,20 +39,20 @@
 .note{
     padding: 10px 3% 10px 3%;
     background-color: #dbb700;
+    text-align: center;
+    font-size: 20px;
 }
 
 .outernotecontainer{
-    text-align: center;
+    .note;
     margin: auto;
-    max-width: 700;
+    max-width: 800;
     position: relative;
 }
 
 .innernotecontainer{
-    padding:1px 3% 1px 3%;
+    .note
     margin: 10px 15% 10px 15%;
-    text-align: center;
-    font-size: 16px;
 }
 
 .outercontainer{
@@ -85,7 +85,7 @@
 #detailtable td, #detailtable th {
     font-size: 20px;
     border: 1px solid #ddd;
-    padding: 9px 20px 9px 20px;
+    padding: 8px 20px 8px 20px;
 }
 
 .innertextcontainer{
