--- a/NewCSS.css
+++ b/NewCSS.css
@@ -82,12 +82,15 @@
     padding-bottom: 15px;
 }
 
+.detailtable{
+    border-collapse: collapse;
+    cellpadding: 6;
+}
+
 .detailtable td, .detailtable th {
     font-size: 20px;
     border: 1px solid #ddd;
     padding: 8px 20px 8px 20px;
-    border-collapse: collapse;
-    cellpadding: 6;
 }
 
 .innertextcontainer{
