--- a/NewCSS.css
+++ b/NewCSS.css
@@ -108,3 +108,9 @@
     position: relative;
     z-index: 99;
 }
+
+.conditionsystemcontainer{
+   padding: 10px 5% 10px 5%;
+   color:#333;
+   border:1px solid #dedede;
+}
