--- a/NewCSS.css
+++ b/NewCSS.css
@@ -109,8 +109,15 @@
     z-index: 99;
 }
 
+.conditiontable td, .conditiontable th {
+    .detailtable
+    font-size: 18px;
+}
+
 .conditionsystemcontainer{
+   margin-top: 15px;
    padding: 10px 5% 10px 5%;
    color:#333;
    border:1px solid #dedede;
+   font-size: 18px;
 }
