--- a/NewCSS.css
+++ b/NewCSS.css
@@ -41,12 +41,14 @@
     background-color: #dbb700;
     text-align: center;
     font-size: 20px;
+    display: inline;
 }
 
 .outernotecontainer{
     width: auto;
     max-width: 800;
     position: relative;
+    margin: auto;
 }
 
 .innernotecontainer{
