--- a/NewCSS.css
+++ b/NewCSS.css
@@ -15,17 +15,17 @@
 
 #navbuttoncontainer, #storebuttoncontainer{
     text-align: center;
-    font-size:18px;
+    font-size:20px;
     height: auto;
-    padding-bottom: 10;
-    padding-top: 10;
+    padding-bottom: 15;
+    padding-top: 15;
 }
 
 .navbutton{	
     text-decoration: unset;	
     background-color: #b7c7bd;	
     color: black;	
-    padding: 8px 14px;	
+    padding: 6px 10px;	
     display: inline-block;	
     box-sizing: border-box;	
 }
@@ -33,7 +33,8 @@
 .navbuttonwrapper{
     display: inline-block;
     position: relative;
-    margin: 5px 4px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .note{
@@ -45,9 +46,7 @@
 }
 
 .outernotecontainer{
-    width: auto;
-    max-width: 800;
-    position: relative;
+    max-width: 800px;
     margin: auto;
 }
 
