--- a/NewCSS.css
+++ b/NewCSS.css
@@ -38,7 +38,7 @@
 }
 
 .note{
-    padding: 1px 1px 1px 1px;
+    padding: 1px 10px;
     background-color: #dbb700;
     text-align: center;
     font-size: 20px;
@@ -47,7 +47,7 @@
 
 .outernotecontainer{
     max-width: 800px;
-    margin: auto;
+    position: relative;
 }
 
 .innernotecontainer{
