--- a/NewCSS.css
+++ b/NewCSS.css
@@ -42,11 +42,13 @@
     background-color: #dbb700;
     text-align: center;
     font-size: 20px;
-    display: block;
+    display: inline-block;
 }
 
 .outernotecontainer{
-    max-width: 800px;
+    max-width: 775px;
+    margin: auto; 
+    display: inline-block;
     position: relative;
 }
 
