--- a/NewCSS.css
+++ b/NewCSS.css
@@ -17,8 +17,6 @@
     text-align: center;
     font-size:20px;
     height: auto;
-    padding-bottom: 15;
-    padding-top: 15;
 }
 
 .navbutton{	
@@ -70,6 +68,8 @@
     color:#333;
     border:1px solid #dedede;
     text-decoration: unset;
+    margin-top: 15px;
+    margin-bottom: 15px
 }
 
 .sectionheading{
@@ -110,7 +110,7 @@
     padding: 8px 20px 8px 20px;
 }
 
-.detailtable tr, .conditiontable tr {
+.detailtable tr:not(:first-child):not(:last-child), .conditiontable tr:not(:first-child):not(:last-child) {
     border-bottom: 1px solid #dedede;
     border-top: 1px solid #dedede;
 }
