--- a/NewCSS.css
+++ b/NewCSS.css
@@ -132,3 +132,9 @@
     font-size: 16px;
     padding:0px 7%;
 }
+
+hr.fadestyle {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
