--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -70,7 +70,7 @@
 
 .sectionheading{
     padding: 15px 5% 15px 5%;
-    background-color: #b7c7bd;
+    background-color: white;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -160,6 +160,9 @@ hr.fadestyle {
     cursor: pointer;
     background-color: white;
     color:#333;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px 1px 0px 1px;
 }
 
 .tabs .tab .content {
@@ -169,11 +172,14 @@ hr.fadestyle {
     position: absolute;
     left: 0px;
     color:#333;
-    border:1px solid #dedede;
+    border-color: #dedede;
+    border-style: solid;
+    border-width: 1px 1px 1px 1px;
 }
 
 .tabinput:checked ~ label{
     background-color: #b7c7bd;
+    border-color: #dedede;
 }
 
 .tabinput:checked ~ [id^="tab_content"] {
