--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -70,15 +70,18 @@
 
 .sectionheading{
     padding: 15px 5% 15px 5%;
-    background-color: white;
+    background-color: #b7c7bd;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
 }
 
 #listingtitleheader{
-    padding-top: 15px; 
-    padding-bottom: 15px;
+    padding: 20px 0px;
+    background-color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .innertextcontainer{
