--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -77,7 +77,7 @@
 }
 
 #listingtitleheader{
-    padding: 20px 0px;
+    padding: 20px 0px 40px 0px;
     background-color: white;
     text-align: center;
     font-size: 20px;
@@ -169,7 +169,7 @@ hr.fadestyle {
 }
 
 .tabs .tab .content {
-    display: none;
+    display: block;
     overflow: hidden;
     width: 100%;
     position: absolute;
@@ -185,6 +185,6 @@ hr.fadestyle {
     border-color: #dedede;
 }
 
-.tabinput:checked ~ [id^="tab_content"] {
-    display: block;
+.tabinput:not(:checked) ~ [id^="tab_content"] {
+    display: none;
 }
