--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -1,18 +1,3 @@
-.grain{
-    pointer-events: none;
-    display: block;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 90;
-    opacity: .07;
-    background-origin: padding-box;
-    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/noise.jpg');
-}
-
 .note{
     padding: 1px 20px;
     background-color: #dbb700;
@@ -43,10 +28,10 @@
 
 .sectionheading{
     padding: 15px 5% 15px 5%;
-    background-color: #b7c7bd;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png');
 }
 
 #listingtitleheader{
@@ -55,6 +40,7 @@
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    color:#333;
 }
 
 .innertextcontainer{
@@ -132,13 +118,14 @@ hr.fadestyle {
 .tab label {
     display: block;
     font-size:20px;
-    padding: 6px 15px;
+    padding: 6px 15px 8px;
     cursor: pointer;
     background-color: white;
     color:#333;
     border-color: white;
     border-style: solid;
     border-width: 1px 1px 0px 1px;
+    position: relative;
 }
 
 .tabs .tab .content {
@@ -148,17 +135,18 @@ hr.fadestyle {
     position: absolute;
     left: 0px;
     color:#333;
-    background:white;
     border-color: #dedede;
     border-style: solid;
     border-width: 1px 1px 1px 1px;
     opacity: 0;
+    margin-top: -1;
+    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/greynoise.png');
 }
 
 .tabinput:checked ~ label{
     background: url('https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png');
-    background-size: cover;
     border-color: #dedede;
+    z-index: 80;
 }
 
 .tabinput:checked ~ [id^="tab_content"] {
