--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -1,9 +1,7 @@
 .note{
-    padding: 1px 20px;
+    margin: 0 5%;
     text-align: center;
     font-size: 20px;
-    display: inline-block;
-    position: relative;
 }
 
 .outernotecontainer{
