--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -1,164 +1,170 @@
-.note{
-    margin: 0 5%;
-    text-align: center;
-    font-size: 20px;
+.tabs * {
+	color: #333333;
+
+	font-size: 20px;
 }
 
-.outernotecontainer{
-    max-width: 775px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
+/* Title at the top of the listing */
+#listingtitleheader {
+	margin: 20px 0 40px 0;
+
+	text-align: center;
+
+	background-color: white;
+
+	font-weight: bold;
 }
 
-#maincontainer{
-    position: relative;
-    background:white;
-    text-align:left;
-    color:#333;
-    border:1px solid #dedede;
-    text-decoration: unset;
-    margin-top: 15px;
-    margin-bottom: 15px
+/* Section seperators */
+.sectionheading {
+	margin: 15px 0;
+	padding: 10px 0;
+
+	text-align: center;
+
+	background: url("https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png");
+
+	font-weight: bold;
 }
 
-.sectionheading{
-    padding: 10px 5% 10px 5%;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png');
+/* Left-aligned content text */
+.innertextcontainer {
+	margin: 15px 7%;
 }
 
-#listingtitleheader{
-    padding: 20px 0px 40px 0px;
-    background-color: white;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    color:#333;
+/* Container for listing photos */
+.gallerycontainer {
+	margin: 0 5%;
 }
 
-.innertextcontainer{
-    padding:15px 7% 15px 7%;
-    font-size: 20px;
+/* Individual photo styling */
+.galleryimage {
+	position: relative;
+
+	max-width: 100%;
+	max-height: 700px;
+	margin-bottom: 10px;
 }
 
-.gallerycontainer{
-    padding:0px 5% 10px 5%;
+.detailtable , .conditiontable {
+	border-collapse: collapse;
 }
 
-.galleryimage{
-    margin-bottom: 10px;
-    max-width: 100%;
-    max-height: 700px;
-    position: relative;
-    z-index: 99;
+.detailtable td , .detailtable th {
+	padding: 8px 10px 8px 10px;
 }
 
-.detailtable, .conditiontable{
-    border-collapse: collapse;
+.detailtable tr , .conditiontable tr {
+	border-bottom: 1px solid #DEDEDE;
 }
 
-.detailtable td, .detailtable th {
-    font-size: 20px;
-    padding: 8px 20px 8px 0px;
+.conditiontable td , .conditiontable th {
+	padding: 8px 10px 8px 10px;
+
+	font-size: 16px;
 }
 
-.detailtable tr, .conditiontable tr {
-    border-bottom: 1px solid #dedede;
-}
+.conditionsystemcontainer {
+	margin-top: 15px;
+	padding: 0 5% 10px 5%;
 
-.conditiontable td, .conditiontable th {
-    font-size: 16px;
-    padding: 8px 20px 8px 0px;
-}
+	border: 1px solid #DEDEDE;
 
-.conditionsystemcontainer{
-   margin-top: 15px;
-   padding: 0px 5% 10px 5%;
-   color:#333;
-   border:1px solid #dedede;
-   font-size: 18px;
+	font-size: 18px;
 }
 
 .policytext hr {
-    font-size: 18px;
+	font-size: 18px;
 }
 
 .policytext {
-    font-size: 16px;
-    padding:0px 7%;
+	padding: 0 7%;
+
+	font-size: 16px;
 }
 
 hr.fadestyle {
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+	height: 1px;
+
+	border: 0;
+	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-.tabs{
-    width: 900px;
-    margin: 15px auto;
-    position: relative;
+.tabs {
+	position: relative;
+
+	width: 900px;
+	margin: 15px auto;
+
+	text-decoration: unset;
 }
 
-.tabs .tab{
-    float: left;
+.tabs .tab {
+	float: left;
 }
 
-.tabinput{
-    display: none;
+.tabinput {
+	display: none;
 }
 
 .tab label {
-    display: block;
-    font-size:20px;
-    text-align: center;
-    padding: 10px 7px 10px;
-    cursor: pointer;
-    background-color: white;
-    color:#333;
-    border-color: white;
-    border-style: solid;
-    border-width: 1px 1px 0px 1px;
-    position: relative;
+	position: relative;
+
+	display: block;
+
+	padding: 10px 7px 10px;
+
+	cursor: pointer;
+	text-align: center;
+
+	border-width: 1px 1px 0 1px;
+	border-style: solid;
+	border-color: white;
+	background-color: white;
 }
 
 .tabs .tab .content {
-    z-index: 10;
-    overflow: hidden;
-    width: 100%;
-    position: absolute;
-    left: 0px;
-    color:#333;
-    border-color: #dedede;
-    border-style: solid;
-    border-width: 1px 1px 1px 1px;
-    opacity: 0;
-    margin-top: -1;
-    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/greynoise.png');
+	position: absolute;
+	z-index: 10;
+	left: 0;
+
+	overflow: hidden;
+
+	width: 100%;
+	margin-top: -1;
+
+	opacity: 0;
+	border-width: 1px 1px 1px 1px;
+	border-style: solid;
+	border-color: #DEDEDE;
+	background: url("https://rawgit.com/kmgallahan/CSSFiles/master/greynoise.png");
 }
 
-.tabinput:checked ~ label{
-    background: url('https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png');
-    border-color: #dedede;
-    z-index: 80;
-    font-weight: bold;
+.tabinput:checked ~ label {
+	z-index: 30;
+
+	border-color: #DEDEDE;
+	background: url("https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png");
+
+	font-weight: bold;
 }
 
 .tabinput:checked ~ [id^="tab_content"] {
-    z-index: 50;
-    opacity: 1;
+	z-index: 20;
+
+	opacity: 1;
 }
 
 .tab label::after {
-    display: block;
-    content: attr(for);
-    font-weight: bold;
-    height: 1px;
-    color: transparent;
-    overflow: hidden;
-    visibility: hidden;
-  }
+	display: block;
+	visibility: hidden;
+	overflow: hidden;
+
+	height: 1px;
+
+	content: attr(for);
+
+	color: transparent;
+
+	font-weight: bold;
+}
