--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -21,6 +21,7 @@
 	padding: 10px 0;
 
 	text-align: center;
+    line-height: 1.3;
 
 	background: url("https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png");
 
@@ -116,6 +117,7 @@ hr.fadestyle {
 
 	cursor: pointer;
 	text-align: center;
+    line-height: 1.3;
 
 	border-width: 1px 1px 0 1px;
 	border-style: solid;
