--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -21,7 +21,7 @@
 	padding: 10px 0;
 
 	text-align: center;
-    line-height: 1.3;
+    line-height: 1.3; /* Because Safari is bad... */
 
 	background: url("https://rawgit.com/kmgallahan/CSSFiles/master/greennoise.png");
 
@@ -84,11 +84,11 @@
 	font-size: 16px;
 }
 
-hr.fadestyle {
+.horizontaldivider {
 	height: 1px;
 
-	border: 0;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+	border: 1 0 0 0;
+	border: 1px solid #DEDEDE;
 }
 
 .tabs {
@@ -117,7 +117,7 @@ hr.fadestyle {
 
 	cursor: pointer;
 	text-align: center;
-    line-height: 1.3;
+    line-height: 1.3; /* Because Safari is bad... */
 
 	border-width: 1px 1px 0 1px;
 	border-style: solid;
