--- a/TabbedDesign.css
+++ b/TabbedDesign.css
@@ -87,8 +87,7 @@
 .horizontaldivider {
 	height: 1px;
 
-	border: 1 0 0 0;
-	border: 1px solid #DEDEDE;
+	border-top: 1px solid #DEDEDE;
 }
 
 .tabs {
