--- a/WidthCSS.css
+++ b/WidthCSS.css
@@ -180,7 +180,7 @@
 @media screen and (min-width: 900px) {
     .listingcontainer{
     	width: 100%;
-    	max-width: 900px;
+    	max-width: 100%;
     	margin-left: 0px;
     	margin-right: 0px;
     }
