--- a/WidthCSS.css
+++ b/WidthCSS.css
@@ -4,6 +4,15 @@
 	font-size: 20px;
 }
 
+.listingcontainer {
+	position: relative;
+	
+	max-width: 900;
+	margin: 15px auto;
+
+	text-decoration: unset;
+}
+
 /* Title at the top of the listing */
 #listingtitleheader {
 	margin: 30px 0;
@@ -97,15 +106,6 @@
 	border-top: 1px solid #DEDEDE;
 }
 
-.listingcontainer {
-	position: relative;
-
-	width: 100%;
-	margin: 15px 0px;
-
-	text-decoration: unset;
-}
-
 .listingcontainer .tab {
 	float: left;
 }
@@ -177,7 +177,7 @@
 	font-weight: bold;
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 900px) {
     .listingcontainer{
     	width: 100%;
     	margin-left: 0;
