--- a/ResponsiveCSS.css
+++ b/ResponsiveCSS.css
@@ -12,6 +12,8 @@
 }
 
 .tabbedview{
+    position: relative;
+
     max-width: 900;
     margin: 0px auto;
 }
@@ -47,7 +49,7 @@
 
 /* Container for listing photos */
 .gallerycontainer {
-	margin: 15px 5%;
+	margin: 15px 5% 0 5%;
 	
 	text-align: center;
 }
