--- a/ResponsiveCSS.css
+++ b/ResponsiveCSS.css
@@ -1,9 +1,11 @@
-.compactview *, .tabbedview * {
+.compactview *, .tabbedview *, .listingtitle {
     text-decoration: unset;
 
     color: #333333;
 
+    font-family: "Segoe UI", "Lucida Grande", Arial, Helvetica, Tahoma, sans-serif;
     font-size: 20px;
+    line-height: 1.3;
 }
 
 .compactview {
@@ -15,7 +17,7 @@
 .tabbedview {
     position: relative;
 
-    max-width: 900;
+    max-width: 850;
     margin: 0 auto;
 }
 
@@ -40,7 +42,6 @@
 
     font-size: 22px;
     font-weight: bold;
-    line-height: 1.3; /* Because Safari... */
 }
 
 /* Left-aligned content text */
@@ -126,7 +127,6 @@
     background-color: white;
 
     font-size: 22px;
-    line-height: 1.3; /* Because Safari... */
 }
 
 .tab .content {
@@ -175,7 +175,7 @@
     font-weight: bold;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 850px) {
     .compactview {
         display: block;
     }
