--- a/ResponsiveCSS.css
+++ b/ResponsiveCSS.css
@@ -3,7 +3,7 @@
 
     color: #333333;
 
-    font-family: "Segoe UI", "Lucida Grande", Arial, Helvetica, Tahoma, sans-serif;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
     font-size: 20px;
     line-height: 1.3;
 }
