--- a/ResponsiveCSS.css
+++ b/ResponsiveCSS.css
@@ -91,7 +91,7 @@
 }
 
 .conditionsystemcontainer {
-    margin-top: 15px;
+    margin: 15px auto 0px auto;
     padding: 0 5% 10px 5%;
     max-width: 450px;
 
