--- a/FirefoxTest.css
+++ b/FirefoxTest.css
@@ -198,10 +198,12 @@
     }
 }
 
+/* Because Firefox is the only browser that doesn't handle the tabs correctly... */
 @supports ( -moz-appearance:none ) {
     .compactview {
         display: block;
         max-width: 850;
+        margin: 0 auto;
     }
 
     .tabbedview {
