--- a/ResponsiveCSS.css
+++ b/ResponsiveCSS.css
@@ -81,6 +81,13 @@
     border-top: 1px solid #DEDEDE;
 }
 
+.shippingtable tr:not(:last-child) {
+    border-bottom: 1px solid #DEDEDE;
+}
+.shippingtable tr:not(:first-child) {
+    border-top: 1px solid #DEDEDE;
+}
+
 .relatedtable tr {
     border-top: 1px solid #DEDEDE;
     border-bottom: 1px solid #DEDEDE;
